--- a/data.css
+++ b/data.css
@@ -64,3 +64,26 @@
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
 }
+
+/* animation */
+.content-box:hover {
+  transform: scale(1.07);
+  transition-timing-function: ease-out;
+  transition: transform .2s;
+}
+
+.content-box:hover > .state {
+  font-size: 23px;
+  text-shadow: dimgray;
+}
+
+.content-box:hover > .year {
+  font-size: 23px;
+  color: deeppink;
+  text-shadow: dimgray;
+}
+
+.content-box:hover > .population {
+  font-size: 23px;
+  text-shadow: dimgray;
+}
