--- a/data.css
+++ b/data.css
@@ -13,7 +13,9 @@
 .data-table {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin-left: 90px;
+  margin-right: 90px;
 }
 
 /* data box styles */
@@ -21,8 +23,8 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  justify-content: center;
-  margin: 5px auto 5px auto;
+  place-content: center;
+  margin: 10px auto 10px auto;
   padding: 10px;
   height: 200px;
   width: 300px;
@@ -86,4 +88,20 @@
 .content-box:hover .population {
   font-size: 23px;
   text-shadow: dimgray;
+}
+
+.statistics-menu ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: center;
+  flex: 1;
+}
+
+.statistics-menu li {
+  justify-content: center;
+}
+
+.statistics-menu p {
+  display: inline-flex;
+  margin-top: 1.4rem;
 }
