--- a/style.css
+++ b/style.css
@@ -36,6 +36,22 @@ body {
   text-decoration: none;
 }
 
+.home-content {
+  display: flex;
+  /* background: linear-gradient(to top, #18002b, #221b27); */
+}
+
+.home-content::before {
+  content: "";
+  background-image: var(--bg-image);
+  background-size: cover;
+  width: 100%;
+  height: 65%;
+  z-index: -1;
+  position: absolute;
+  filter: blur(14px);
+}
+
 /* text option */
 
 .text {
@@ -66,7 +82,7 @@ body {
 /* text decoration */
 
 .text-gradient {
-  background: linear-gradient(to right, #30cfd0, #c43ad6);
+  background: linear-gradient(to right, #30cfd0, #c60fdf);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -80,10 +96,7 @@ body {
   width: 600px;
   display: flex;
   flex-direction: column;
-}
-
-.home-content {
-  display: flex;
+  filter: drop-shadow(0px 0px 10px rgba(0 0 0 / 98%));
 }
 
 /* buttons styles */
@@ -140,10 +153,6 @@ body {
 
 .btn-glow:hover {
   box-shadow: rgba(var(--primary-color), 0.5) 0px 0px 20px 0px;
-}
-
-.footer {
-  display: flex;
 }
 
 .form-control::placeholder {
