--- a/style.css
+++ b/style.css
@@ -200,6 +200,17 @@ body {
   box-shadow: rgba(var(--primary-color), 0.5) 0px 0px 20px 0px;
 }
 
+.services {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.service img {
+  margin-bottom: 20px;
+  justify-content: center;
+}
+
 .form-control::placeholder {
   font-size: 0.95rem;
   color: #aaa;
