--- a/style.css
+++ b/style.css
@@ -202,13 +202,27 @@ body {
 
 .services {
   display: flex;
-  align-content: center;
-  justify-content: center;
+  flex-direction: row;
+}
+
+.service {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .service img {
   margin-bottom: 20px;
-  justify-content: center;
+  max-width: 340px;
+  position: relative;
+}
+
+.service h1 {
+  text-align: center;
+}
+
+.service p {
+  text-align: justify;
 }
 
 .form-control::placeholder {
