--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body {
 
 .home-content {
   display: flex;
+  height: 100vh;
   /* background: linear-gradient(to top, #18002b, #221b27); */
 }
 
@@ -51,10 +52,14 @@ body {
   background-image: var(--bg-image);
   background-size: cover;
   width: 100%;
-  height: 65%;
+  height: 100%;
   z-index: -1;
   position: absolute;
   filter: blur(14px);
+}
+
+.home-content h1 {
+  margin-top: 120px;
 }
 
 /* text option */
@@ -203,6 +208,7 @@ body {
 .services {
   display: flex;
   flex-direction: row;
+  height: 100vh;
 }
 
 .service {
