--- a/style.css
+++ b/style.css
@@ -174,6 +174,11 @@ body {
   font-size: 15px;
 }
 
+.btn-x-large {
+  padding: 10px 28px;
+  font-size: 18px;
+}
+
 .btn:hover {
   transition: all 0.3s ease;
 }
@@ -209,7 +214,12 @@ body {
   display: flex;
   flex-direction: row;
   height: 100vh;
-  margin-top: 120px;
+  margin-top: 70px;
+}
+
+.section-title {
+  text-align: center;
+  margin-top: 100px;
 }
 
 .service {
