--- a/style.css
+++ b/style.css
@@ -141,6 +141,27 @@ body {
   }
 }
 
+/* icon decoration */
+.icon-section {
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+}
+
+.icon-section span {
+  margin: 0 100px 0 100px
+}
+
+.icon-section span i {
+  font-size: 100px;
+  color: hotpink;
+}
+
+.icon-section span p {
+  text-align: center;
+  margin-top: 10px;
+}
+
 /* make it with Bootstrap */
 .right-side-image {
   width: 600px;
@@ -210,24 +231,30 @@ body {
   box-shadow: rgba(var(--primary-color), 0.5) 0px 0px 20px 0px;
 }
 
-.services {
+/* section */
+.section {
+  color: #1d1e22;
   height: 100vh;
-  margin-top: 70px;
+  margin-bottom: 10px;
+}
+
+.section::before {
+  content: "";
+  background-color: #fff;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  position: absolute;
 }
 
 .section-title {
   text-align: center;
-  margin-top: 100px;
 }
 
 .section-subtitle {
   text-align: center;
   margin-top: 50px;
-}
-
-.icon-section {
-  display: flex;
-  justify-content: center;
 }
 
 .service {
