--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 /* navigation */
 
+.navbar-nav .nav-link {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 .logo {
   font-size: 25px;
   font-weight: 800;
